# zelos

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt  start.py  zelos.yaml
dashboard/: index.html
demo/: 01_single_agent.py  02_multi_agent.py  03_http_api.py  04_custom_scoring.py  05_hot_join.py  06_full_pipeline.py  07_langchain_agent.py  08_crewai_agent.py  09_autogen_agent.py  10_mixed_frameworks.py  11_verifier_pipeline.py  12_observability.py  13_security.py  14_multi_tenancy.py  15_advanced_execution.py  16_container_isolation.py  17_hot_reload.py  18_distributed.py  19_cli_demo.sh  20_hitl_approval_workflow.py  21_multi_tenant_isolation.py  README.md
docs/: commercialization.md  competitive-analysis.md  glossary.md  murmur-vs-zelos.md  phase2-implementation-report.md  phase3-implementation-report.md  ppt-script-zelos-intro.md  repo-description.md  temporal-reliability-analysis.md  v0.8.0-requirements.md  zelos-for-nef-whitepaper.md
public/: index.html  operations.html  search.js  zelos-manual.html  zelos-zh.html  zelos.html  zelos_sdk.html
scripts/: generate_docs.py
tests/: test_all.py  test_benchmark.py  test_coordination.py  test_distributed_cluster.py  test_event_sourcing.py  test_heartbeat.py  test_messaging.py  test_mtls.py  test_opentelemetry.py  test_persistence.py  test_phase1_remaining.py  test_phase1_remaining_spec.md  test_phase2.py  test_phase2_spec.md  test_phase3.py  test_phase3_integration.py  test_phase3_spec.md  test_phase5.py  test_planner.py  test_planner_spec.md  test_protocol_adapters.py  test_recovery.py  test_specification.md  test_storage.py  test_storage_integration.py  test_storage_spec.md
zelos/: __init__.py  advanced_execution.py  capability_registry.py  cli.py  config_loader.py  container_isolation.py  coordination.py  distributed.py  event_bus.py  event_sourcing.py  execution_engine.py  goal_state.py  hot_reload.py  http_adapter.py  memory.py  messaging.py  messaging_nats.py  multi_tenancy.py  observability.py  planner.py  policy.py  (+10 more)
zelos-go/: README.md  go.mod
zelos-ts/: README.md  package.json
(+82 files in other folders)
