[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zelos"
version = "0.5.0"
description = "Open Multi-Agent Orchestration Runtime"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Zelos Contributors"}
]
keywords = [
    "multi-agent",
    "orchestration",
    "runtime",
    "ai",
    "agent-orchestration",
    "llm",
    "agent-framework",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []
# Zelos core requires zero external dependencies — pure Python stdlib.

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/zelos/zelos"
Repository = "https://github.com/zelos/zelos"
Documentation = "https://github.com/zelos/zelos"

[tool.setuptools.packages.find]
include = ["zelos*", "zelos_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [".git", "__pycache__", ".pytest_cache", "venv", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["zelos", "zelos_sdk"]
